--- a/cat-card/cat-cards/package.json
+++ b/cat-card/cat-cards/package.json
@@ -15,14 +15,17 @@
     "@angular/cdk": "^8.1.4",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
+    "@angular/core": "^8.2.5",
     "@angular/forms": "~8.2.0",
     "@angular/material": "^8.1.4",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.2.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
