--- a/cat-card/cat-cards/package.json
+++ b/cat-card/cat-cards/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.2.1",
+    "dotenv": "^8.1.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
